# authorization_types

./: .env  .gitignore  Dockerfile  README.md  cookies.txt  docker-compose.yml  entrypoint.sh  pyproject.toml  run.sh  tasks.md
.github/: FUNDING.yml
app/: auth.py  config.py  db.py  logger.py  main.py  models.py  service.py  utils.py
app/api/: objects.py
app/database/: __init__.py  db.py  local_db.py  models.py  users.py
app/keycloak/: __init__.py  auth.py  client.py
app/oauth/: __init__.py  github.py  handlers.py  models.py
app/services/: auth.py  business_logic.py  helpers.py  users.py
docs/: basic_auth_explained.md  jwt_auth_explained.md  nginx_auth_gateway.md  oauth_github_auth.md  session_auth_explained.md
nginx/: .htpasswd  401.html  nginx.conf
scripts/: init_keycloak.py  start.sh
tests/: conftest.py  test_auth_handlers.py  test_cookies.py  test_oauth.py  test_objects_api.py  test_services.py
